--- a/diy.css
+++ b/diy.css
@@ -1,7 +1,7 @@
 .dew-diy {
   --dew-shift: filter 0ms;
-  --dew-solar: pink;
-  --dew-lunar: rebeccapurple;
+  --dew-solar: hotpink;
+  --dew-lunar: #201;
   --dew-locus: currentColor;
   --dew-focus: invert(100%);
   --dew-hover: hue-rotate(0deg);
